--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0; url=https://Test.github.io/zaid/index.html">
+  <meta http-equiv="refresh" content="0; url=https://test.github.io/zaid/index.html">
   <title>Document</title>
 </head>
 <body>
