--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="refresh" content="0; url=/zaid/index.html">
+  <meta http-equiv="refresh" content="0; url=./zaid/index.html">
   <title>Document</title>
 </head>
 <body>
-  outer zaid folder
-  <a href="/zaid/index.html">link</a>
+  redirection page
+  <a href="./zaid/index.html">link</a>
 </body>
 </html>
